--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "author": "cbonaudo <cbonaudo@hotmail.fr>",
   "private": true,
   "scripts": {
-    "start:dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "start:dev": "webpack-dev-server --inline --progress --hot --config build/webpack.dev.conf.js",
     "start": "npm run start:dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
-    "lint": "eslint --ext .js,.vue src test/unit",
+    "lint": "eslint --ext .js,.vue src test/unit --fix",
+    "prettier": "prettier --write 'src/**/*.{vue,js}'",
     "build": "node build/build.js"
   },
   "dependencies": {
